--- a/contrib/git.nwchem/authors.txt
+++ b/contrib/git.nwchem/authors.txt
@@ -31,7 +31,7 @@ d3y133 = Huub Van Dam <hvandam@bnl.gov>
 edo = Edoardo Apra <edoardo.apra@gmail.com>
 *evorpa = Erich Vorpagel <evorpa>
 faquino = Fredy Aquino <fredyaquinopu@gmail.com>
-fisc331 = Sean Fischer <sean.fischer.ctr@nrl.navy.mil>
+fisc331 = Sean Fischer <sean.fischer@nrl.navy.mil>
 fruechtl = Herbert Fruechtl <herbert.fruchtl@st-andrews.ac.uk>
 gg502 = David E Bernholdt <bernholdtde@ornl.gov>
 gutowski = Maciej Gutowski <M.Gutowski@hw.ac.uk>
@@ -44,10 +44,10 @@ jbrabec = Jiri Brabec <jiri.brabec@jh-inst.cas.cz>
 jdaily = Jeff Daily <Jeff.Daily@pnnl.gov>
 jhammond = Jeff Hammond <jeff.r.hammond@intel.com>
 jhvan = Joop van Lenthe <joop@chem.uu.nl>
-*jmoore = jmoore <jmoore>
+jmoore = Justin Moore <thelorax00@gmail.com>
 jochen = Jochen Autschbach <jochena@buffalo.edu>
 jolguin = Jorge Garza-Olguin <jgarzaolguin@gmail.com>
-*jormacara = jormacara <jormacara>
+jormacara = Jorge Martin del Campo Ramirez <jormacara@gmail.com>
 klopata = Ken Lopata < klopata@lsu.edu>
 kowalski = Karol Kowalski <karol.kowalski@pnnl.gov>
 kvogiatzis = Konstantinos Vogiatzis <kvogiatz@utk.edu>
@@ -64,7 +64,7 @@ mklemm = Michael Klemm <michael.klemm@intel.com>
 mswart = Marcel Swart <marcel.swart@icrea.cat>
 ng716 = James Anchell <james.l.anchell@intel.com>
 ng972 = Eric Glendening <ericg@chem.indstate.edu>
-niri = Niri Govind <niri.govind@pnl.gov>
+niri = Niri Govind <niri.govind@pnnl.gov>
 nwchem = nwchem <nwchem>
 og845 = Edoardo Apra <edoardo.apra@pnnl.gov>
 panyala = Ajay R Panyala <ajay.panyala@pnnl.gov>
@@ -85,3 +85,4 @@ vg422 =  Xiping Long <vg422>
 windus = Theresa Windus <twindus@iastate.edu>
 yuri = Yuri Alexeev <yuri@alcf.anl.gov>
 zzhang = Ziyong Zhang <zyzhang@stanford.edu>
+jensen = Lasse Jensen <jensen@chem.psu.edu>
