--- a/contrib/git.nwchem/authors.txt
+++ b/contrib/git.nwchem/authors.txt
@@ -53,7 +53,7 @@ kowalski = Karol Kowalski <karol.kowalski@pnnl.gov>
 kvogiatzis = Konstantinos Vogiatzis <kvogiatz@utk.edu>
 lima338 =  Giovanni Li Manni < g.limanni@fkf.mpg.de>
 mado390 = Dongxia Ma <d.ma@fkf.mpg.de>
-marat = Marat Valiev <marat.valiev@pnnl.gov>
+marat = Marat Valiev <marat.valiev@gmail.com>
 mdupuis = Michel Dupuis <mdupuis2@buffalo.edu>
 mg141 = Miles Deegan <m.deegan@skatelescope.org>
 mg201 = Kenneth Dyall <dyall@schrodinger.com>
