--- a/contrib/git.nwchem/authors.txt
+++ b/contrib/git.nwchem/authors.txt
@@ -7,7 +7,7 @@ bjohnson = Benny Johnson < johnson@quantumsimulations.com>
 *bmeng = Baoqi Meng <bmeng>
 bojana = Bojana Ginovska-Pangovska <bojana.ginovska-pangovska@pnnl.gov>
 bpalmer = Bruce Palmer <Bruce.Palmer@pnnl.gov>
-bylaska = Eric Bylaska <Eric.Bylaska@pnnl.gov>
+bylaska = Eric Bylaska <bylaska@gmail.com>
 carlfahl = Carl Fahlstrom  <carl@carlfahlstrom.com>
 d35162 = Judith M Cuta <judith.cuta@pnnl.gov>
 d3e129 = Ricky Kendall <kendallra@ornl.gov>
