--- a/contrib/git.nwchem/authors.txt
+++ b/contrib/git.nwchem/authors.txt
@@ -1,13 +1,14 @@
+(no author) = no_author <no_author@no_author>
 alogsdail = Andrew Logsdail <logsdaila@cardiff.ac.uk>
 apsmith = Arthur Smith <apsmith@aps.org>
 bernhold = Dave Bernholdt <bernholdtde@ornl.gov>
 bert = Bert de Jong <wadejong@lbl.gov>
 bhas990 = Kiran Bhaskaran <kbhaskarannair@wustl.edu>
 bjohnson = Benny Johnson < johnson@quantumsimulations.com>
-*bmeng = Baoqi Meng <bmeng>
+bmeng = Baoqi Meng <bmeng>
 bojana = Bojana Ginovska-Pangovska <bojana.ginovska-pangovska@pnnl.gov>
 bpalmer = Bruce Palmer <Bruce.Palmer@pnnl.gov>
-bylaska = Eric Bylaska <bylaska@gmail.com>
+bylaska = Eric Bylaska <Eric.Bylaska@pnnl.gov>
 carlfahl = Carl Fahlstrom  <carl@carlfahlstrom.com>
 d35162 = Judith M Cuta <judith.cuta@pnnl.gov>
 d3e129 = Ricky Kendall <kendallra@ornl.gov>
@@ -20,69 +21,68 @@ d3h325 = Jarek Nieplocha <d3h325@emsl.pnl.gov>
 d3h449 = Jeff Nichols <nicholsja@ornl.gov>
 d3j191 = Tjerk Straatsma <straatsmatp@ornl.gov>
 d3k958 = Dayle Smith <dayle.m.smith@intel.com>
-*d3m299 = d3m299 <d3m299>
+d3m299 = d3m299 <d3m299>
 d3m782 = Vidhya  Gurumoorthi <vgurumoo@cisco.com>
 d3p298 = Luke W Campbell <luke.campbell@pnnl.gov>
 d3p307 = Dunyou Wang <dywang@sdnu.edu.cn>
 d3p708 = Pat Nichols <pnichols@ucar.edu>
-d3p852 = pnichols@ucar.edu <kurt.glaesemann@pnnl.gov>
-*d3p975 = Peng-dong  Fan <d3p975>
+d3p852 = Kurt Glaesmann <kurt.glaesemann@pnnl.gov>
+d3p975 = Peng-dong  Fan <d3p975>
 d3y133 = Huub Van Dam <hvandam@bnl.gov>
 edo = Edoardo Apra <edoardo.apra@gmail.com>
-*evorpa = Erich Vorpagel <evorpa>
+evorpa = Erich Vorpagel <evorpa>
 faquino = Fredy Aquino <fredyaquinopu@gmail.com>
-fisc331 = Sean Fischer <sean.fischer@nrl.navy.mil>
+fisc331 = Sean Fischer <sean.fischer.ctr@nrl.navy.mil>
 fruechtl = Herbert Fruechtl <herbert.fruchtl@st-andrews.ac.uk>
 gg502 = David E Bernholdt <bernholdtde@ornl.gov>
 gutowski = Maciej Gutowski <M.Gutowski@hw.ac.uk>
-*h3911557 = Darren L Collins <h3911557>
-*hltaylor = hltaylor <hltaylor>
+h3911557 = Darren L Collins <h3911557>
+hltaylor = hltaylor <hltaylor>
 hvd = Huub Van Dam <hvandam@bnl.gov>
 jbecca = Jeffrey C. Becca <jbb5516@psu.edu>
 jbrabec = Jiri Brabec <jiri.brabec@jh-inst.cas.cz>
-*jcarter = jcarter <jcarter>
+jcarter = jcarter <jcarter>
 jdaily = Jeff Daily <Jeff.Daily@pnnl.gov>
 jhammond = Jeff Hammond <jeff.r.hammond@intel.com>
 jhvan = Joop van Lenthe <joop@chem.uu.nl>
-jmoore = Justin Moore <thelorax00@gmail.com>
+jmoore = jmoore <jmoore>
 jochen = Jochen Autschbach <jochena@buffalo.edu>
 jolguin = Jorge Garza-Olguin <jgarzaolguin@gmail.com>
-jormacara = Jorge Martin del Campo Ramirez <jormacara@gmail.com>
+jormacara = jormacara <jormacara>
 klopata = Ken Lopata < klopata@lsu.edu>
 kowalski = Karol Kowalski <karol.kowalski@pnnl.gov>
 kvogiatzis = Konstantinos Vogiatzis <kvogiatz@utk.edu>
 lima338 =  Giovanni Li Manni < g.limanni@fkf.mpg.de>
 mado390 = Dongxia Ma <d.ma@fkf.mpg.de>
-marat = Marat Valiev <marat.valiev@gmail.com>
+marat = Marat Valiev <marat.valiev@pnnl.gov>
 mdupuis = Michel Dupuis <mdupuis2@buffalo.edu>
 mg141 = Miles Deegan <m.deegan@skatelescope.org>
 mg201 = Kenneth Dyall <dyall@schrodinger.com>
 mg650 = Rika Kobayashi <Rika.Kobayashi@anu.edu.au>
-*mhackler = Mahin Hackler <mhackler>
+mhackler = Mahin Hackler <mhackler>
 mjacquelin = Matthias Jacquelin <MJacquelin@lbl.gov>
 mklemm = Michael Klemm <michael.klemm@intel.com>
 mswart = Marcel Swart <marcel.swart@icrea.cat>
 ng716 = James Anchell <james.l.anchell@intel.com>
 ng972 = Eric Glendening <ericg@chem.indstate.edu>
-niri = Niri Govind <niri.govind@pnnl.gov>
+niri = Niri Govind <niri.govind@pnl.gov>
 nwchem = nwchem <nwchem>
-og845 = Edoardo Apra <edoardo.apra@pnnl.gov>
+og845 = Edoardo Apra <edoardo.apra@gmail.com>
 panyala = Ajay R Panyala <ajay.panyala@pnnl.gov>
 pborowsk = Piotr  Borowski <pibcio@vsop408.umcs.lublin.pl>
-pg481 = Krzysztof P Wolinski <wolinski@vsop401.umcs.lublin.pl>
-*pg511 = Hugh L Taylor <pg511>
-*pg898 = Changyol  Lee <pg898>
+g481 = Krzysztof P Wolinski <wolinski@vsop401.umcs.lublin.pl>
+pg511 = Hugh L Taylor <pg511>
+pg898 = Changyol  Lee <pg898>
 pg899 = Zijing Lin <zjlin@ustc.edu.cn>
 piro669 = Teerapong  Pirojsirikul <tpirojsi@ucsd.edu>
-*pollack = Lisa Pollack <lpollack@ks.uiuc.edu >
-*rg240 = Adrian Wong <rg240>
+pollack = Lisa Pollack <lpollack@ks.uiuc.edu>
+rg240 = Adrian Wong <rg240>
 rlins = Roberto Lins Neto <roberto.lins@ufpe.br>
-*sblau = sblau <sblau>
+sblau = sblau <sblau>
 sohirata = So Hirata <sohirata@illinois.edu>
-*twclark = Terry W Clark <twclark>
-*vg038 = vg038 <vg038>
+twclark = Terry W Clark <twclark>
+vg038 = vg038 <vg038>
 vg422 =  Xiping Long <vg422>
 windus = Theresa Windus <twindus@iastate.edu>
 yuri = Yuri Alexeev <yuri@alcf.anl.gov>
 zzhang = Ziyong Zhang <zyzhang@stanford.edu>
-jensen = Lasse Jensen <jensen@chem.psu.edu>
