list used during conversion

--- a/contrib/git.nwchem/authors.txt
+++ b/contrib/git.nwchem/authors.txt
@@ -30,6 +30,7 @@ d3p852 = Kurt Glaesmann <kurt.glaesemann@pnnl.gov>
 d3p975 = Peng-dong  Fan <d3p975>
 d3y133 = Huub Van Dam <hvandam@bnl.gov>
 edo = Edoardo Apra <edoardo.apra@gmail.com>
+d3j911 = Edoardo Apra <edoardo.apra@gmail.com>
 evorpa = Erich Vorpagel <evorpa>
 faquino = Fredy Aquino <fredyaquinopu@gmail.com>
 fisc331 = Sean Fischer <sean.fischer.ctr@nrl.navy.mil>
@@ -70,7 +71,7 @@ nwchem = nwchem <nwchem>
 og845 = Edoardo Apra <edoardo.apra@gmail.com>
 panyala = Ajay R Panyala <ajay.panyala@pnnl.gov>
 pborowsk = Piotr  Borowski <pibcio@vsop408.umcs.lublin.pl>
-g481 = Krzysztof P Wolinski <wolinski@vsop401.umcs.lublin.pl>
+pg481 = Krzysztof P Wolinski <wolinski@vsop401.umcs.lublin.pl>
 pg511 = Hugh L Taylor <pg511>
 pg898 = Changyol  Lee <pg898>
 pg899 = Zijing Lin <zjlin@ustc.edu.cn>
@@ -86,3 +87,7 @@ vg422 =  Xiping Long <vg422>
 windus = Theresa Windus <twindus@iastate.edu>
 yuri = Yuri Alexeev <yuri@alcf.anl.gov>
 zzhang = Ziyong Zhang <zyzhang@stanford.edu>
+vishnu = Abhinav Vishnu  <abhinav.vishnu@pnnl.gov>
+verma =  Pragya Verma <verma045@umn.edu>
+dpeng =  D Peng <dpeng@>
+dwsilverstein = D Silvestein <dwsilverstein@gmail.com>
