--- a/release.notes.6.8
+++ b/release.notes.6.8
@@ -16,10 +16,15 @@ High accuracy
 
     * TBD
 
-Gaussian basis DFT & TDDFT
+Gaussian basis DFT & TDDFT (linear-response and real-time)
 
     * New HLE16 density functional
-    * van Wullen model potential approach for ZORA
+    * van Wullen model potential approach for ZORA and relativistic properties
+    * Restarts for properties (Hessian, magnetic properties) and TDDFT
+    * Higher-order multipoles for TDDFT oscillator strengths
+    * CD fitting enabled in the SO-DFT code
+    * Solvation capabilities enabled in SO-DFT code
+    * Excited-state absorption from excited-state density
 
 Plane-wave DFT and dynamics
 
@@ -27,13 +32,13 @@ Plane-wave DFT and dynamics
 
 Properties
 
-   * MoVIPac interface
-   * DIM/QM 
+   * MoVIPac interface (contact Jochen Autschbach (SUNY, Buffalo))
 
 Enhancement
 
    * improved parallelization for second derivative code
    * improved Raman code
+   * improved ZORA properties code
 
 Output
 
