--- a/release.notes.6.8
+++ b/release.notes.6.8
@@ -20,11 +20,11 @@ Gaussian basis DFT & TDDFT (linear-response and real-time)
 
     * New HLE16 density functional
     * van Wullen model potential approach for ZORA and relativistic properties
-    * Restarts for properties (Hessian, magnetic properties) and TDDFT
+    * Restarts for properties (hessian, magnetic properties) and TDDFT
     * Higher-order multipoles for TDDFT oscillator strengths
     * CD fitting enabled in the SO-DFT code
     * Solvation capabilities enabled in SO-DFT code
-    * Excited-state absorption from excited-state density
+    * Real-time TDDFT excited-state absorption from linear-response excited-state density 
 
 Plane-wave DFT and dynamics
 
