--- a/release.notes.6.8
+++ b/release.notes.6.8
@@ -24,7 +24,7 @@ Gaussian basis DFT & TDDFT (linear-response and real-time)
     * Higher-order multipoles for TDDFT oscillator strengths
     * CD fitting enabled in the SO-DFT code
     * Solvation capabilities enabled in SO-DFT code
-    * Real-time TDDFT excited-state absorption from linear-response excited-state density 
+    * Real-time TDDFT excited-state absorption 
     * On-the-fly property calculations with Gaussian basis AIMD calculations
 
 Plane-wave DFT and dynamics
