--- a/release.notes.6.8
+++ b/release.notes.6.8
@@ -22,10 +22,10 @@ Gaussian basis DFT & TDDFT (linear-response and real-time)
     * van Wullen model potential approach for ZORA and relativistic properties
     * Restarts for properties (hessian, magnetic properties) and TDDFT
     * Higher-order multipoles for TDDFT oscillator strengths
-    * CD fitting enabled in the SO-DFT code
-    * Solvation capabilities enabled in SO-DFT code
+    * CD fitting enabled in the spin-orbit DFT code
+    * Solvation capabilities enabled in spin-orbit DFT code
     * Real-time TDDFT excited-state absorption 
-    * On-the-fly property calculations with Gaussian basis AIMD calculations
+    * Molecular response properties and TDDFT spectra along the ground state trajectory with Gaussian basis AIMD 
 
 Plane-wave DFT and dynamics
 
