--- a/release.notes.6.8
+++ b/release.notes.6.8
@@ -24,7 +24,7 @@ Gaussian basis DFT & TDDFT (linear-response and real-time)
     * Higher-order multipoles for TDDFT oscillator strengths
     * CD fitting enabled in the spin-orbit DFT code
     * Solvation capabilities enabled in spin-orbit DFT code
-    * Real-time TDDFT excited-state absorption 
+    * Real-time TDDFT excited-state density absorption 
     * Molecular response properties and TDDFT spectra along the ground state trajectory with Gaussian basis AIMD 
 
 Plane-wave DFT and dynamics
