--- a/release.notes.6.8
+++ b/release.notes.6.8
@@ -19,13 +19,14 @@ High accuracy
 Gaussian basis DFT & TDDFT (linear-response and real-time)
 
     * New HLE16 density functional
-    * van Wullen model potential approach for ZORA and relativistic properties
+    * van Wullen model potential approach for ZORA (and SO-ZORA) and relativistic properties
     * Restarts for properties (hessian, magnetic properties) and TDDFT
     * Higher-order multipoles for TDDFT oscillator strengths
     * CD fitting enabled in the spin-orbit DFT code
     * Solvation capabilities enabled in spin-orbit DFT code
     * Real-time TDDFT excited-state density absorption 
     * Molecular response properties and TDDFT spectra along the ground state trajectory with Gaussian basis AIMD 
+    * Valence-to-core X-ray emission spectroscopy (VtC-XES) with TDDFT
 
 Plane-wave DFT and dynamics
 
