ifort 17 needed for compiling offloading code on KNC [ci skip]

--- a/release.notes.6.8.1
+++ b/release.notes.6.8.1
@@ -27,6 +27,7 @@ BUG FIXES/ENHANCEMENTS
 
     * introduced "huge" grid to address hessian problems with diffuse functions
 
-    * fix for compiler ifort 18 when compiling offloading code on KNC (not done yet)
+    * ifort 17 needed for compiling offloading code on KNC 
+      https://github.com/nwchemgit/nwchem/issues/15
 
 
