update [ci skip]

--- a/release.notes.7.0.1
+++ b/release.notes.7.0.1
@@ -22,3 +22,5 @@ BUG FIXES/ENHANCEMENTS
     * nwpw module: fixed error in reading semicore-stress
     
     * nwpw module: fix for case when peigs is not available and scalapack is
+    
+    * mcscf module: fix for case when peigs is not available and scalapack is
